--- a/brightness_arbitraryL.ipynb
+++ b/brightness_arbitraryL.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1gpwmPyO5x04M90y64A3-EHHLMym7aLuD",
-      "authorship_tag": "ABX9TyN3AcTKgVl2vxP7DTn5RB4k",
+      "authorship_tag": "ABX9TyPGDzQ1Qa+OU2wv5U95csUI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -201,8 +201,8 @@
         "gpu = 0\n",
         "data = './datasets/o2l1_mv_scl_ref_tm/cbox_tgt+lgt_to_irrgt'\n",
         "scene = 'o2l1_mv_scl_ref_tm'\n",
-        "model = 'brightest_mul_inL' # Baseline\n",
-        "# model = 'brightest_mul_tm_cas' # Calc LTM\n",
+        "# model = 'brightest_mul_inL' # Baseline\n",
+        "model = 'brightest_mul_tm_cas' # Calc LTM\n",
         "\n",
         "suffix = '_debug_0721.00'\n",
         "dataset = 'aligned3_bp_tm_max_rnd'\n",
