--- a/brightness_arbitraryL.ipynb
+++ b/brightness_arbitraryL.ipynb
@@ -6,9 +6,10 @@
       "name": "brightness_arbitraryL.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "machine_shape": "hm",
       "mount_file_id": "1gpwmPyO5x04M90y64A3-EHHLMym7aLuD",
-      "authorship_tag": "ABX9TyPGDzQ1Qa+OU2wv5U95csUI",
+      "authorship_tag": "ABX9TyOLNj89Hc5PUMwmyWE9Sa4E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,14 +44,33 @@
       "metadata": {
         "id": "RNukj3z-0Adq",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 150
+        },
+        "outputId": "9dbb94b4-4a55-4880-c8d5-b23149ce83f5"
       },
       "source": [
         "%cd /content/drive/My\\ Drive/Colabdata/\n",
         "!git clone https://github.com/tkuri/irradiance_estimation.git"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/drive/My Drive/Colabdata\n",
+            "Cloning into 'irradiance_estimation'...\n",
+            "remote: Enumerating objects: 32, done.\u001b[K\n",
+            "remote: Counting objects: 100% (32/32), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (21/21), done.\u001b[K\n",
+            "remote: Total 4744 (delta 20), reused 22 (delta 11), pack-reused 4712\u001b[K\n",
+            "Receiving objects: 100% (4744/4744), 8.50 MiB | 12.60 MiB/s, done.\n",
+            "Resolving deltas: 100% (3393/3393), done.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -187,7 +207,102 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QdQjoUIKxetq",
+        "id": "dfaMEwpEz2H5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def find_bp_process():\n",
+        "  gpu = 0\n",
+        "  data = './datasets/o2l1_mv_scl_ref_tm/cbox_tgt+lgt_to_irrgt'\n",
+        "  scene = 'o2l1_mv_scl_ref_tm'\n",
+        "  model = 'brightest_mul_tm_cas'\n",
+        "  dataset = 'aligned3_bp_tm_max_rnd'\n",
+        "  result_name = model+suffix+'_bp_eval'\n",
+        "\n",
+        "  command = '--dataroot {} --name ./{}/{}{} --model {} --dataset_mode {}'.format(data, scene, model, suffix, model, dataset)\n",
+        "  command += ' --show_multi'\n",
+        "  command += ' --light_res 5'\n",
+        "\n",
+        "  if method == 0:\n",
+        "    # Baseline\n",
+        "    command += ' --no_latent_color --in_Ls --latent_Lt --no_brightness'\n",
+        "  elif method == 1:\n",
+        "    # Direct\n",
+        "    command += ' --in_Ls --in_Lt'\n",
+        "  elif method == 2:\n",
+        "    # Ours1\n",
+        "    command += ' --LTM --cas --in_Ls'\n",
+        "  elif method == 3:\n",
+        "    # Ours2\n",
+        "    command += ' --LTM --cas --latent_Ls'\n",
+        "  elif method == 4:\n",
+        "    # Ours1+reg\n",
+        "    command += ' --LTM --cas --in_Ls --reg_LTM'\n",
+        "  elif method == 5:\n",
+        "    # Ours2+reg\n",
+        "    command += ' --LTM --cas --latent_Ls --reg_LTM'\n",
+        "  elif method == 6:\n",
+        "    # Baseline+cas\n",
+        "    command += ' --cas --no_latent_color --in_Ls --latent_Lt'\n",
+        "  elif method == 7:\n",
+        "    # Baseline+cas+latent_color\n",
+        "    command += ' --cas --in_Ls --latent_Lt'\n",
+        "  elif method == 8:\n",
+        "    # Baseline+latent_color\n",
+        "    command += ' --in_Ls --latent_Lt --no_brightness'\n",
+        "\n",
+        "  # command += ' --max_dataset_size 10'\n",
+        "  # command += ' --cat_In'\n",
+        "  # command += ' --disp_brighest_info'\n",
+        "  # command += ' --shading_norm'\n",
+        "  # command += ' --no_mask'\n",
+        "\n",
+        "  train_command = command + ' --save_latest_freq 100 --n_epochs 5 --n_epochs_decay 5'\n",
+        "  train_command += ' --save_epoch_freq 2'\n",
+        "  train_command += ' --display_freq 100 --update_html_freq 100 --print_freq 5'\n",
+        "  train_command += ' --continue_train --epoch_count 8'\n",
+        "  test_command = command + ' --num_test 100 --test_mode 1'\n",
+        "  test_command += ' --no_save_image'\n",
+        "  test_command += ' --show_multi'\n",
+        "  # test_command += ' --num_threads 1'\n",
+        "  # test_command += ' --re_index'\n",
+        "\n",
+        "  if traintest_mode==0:\n",
+        "      !python train.py {train_command}\n",
+        "      !python test_bp.py {test_command}\n",
+        "  elif traintest_mode==1:\n",
+        "      !python train.py {train_command}\n",
+        "  else:\n",
+        "      !python test_bp.py {test_command}\n",
+        "\n",
+        "\n",
+        "traintest_mode = 0 # 0:train&test, 1:train, 2:test\n",
+        "method = 4\n",
+        "suffix = '_ours2_debug'\n",
+        "\n",
+        "%cd /content/drive/My\\ Drive/Colabdata/irradiance_estimation\n",
+        "!pip install -r requirements.txt\n",
+        "!git pull\n",
+        "find_bp_process()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xsk4R9EcQrvm",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Finding brightest portions (Multi-Illumination Dataset)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4NB8UtUdaG3m",
         "colab_type": "code",
         "colab": {}
       },
@@ -196,21 +311,23 @@
         "!pip install -r requirements.txt\n",
         "!git pull\n",
         "\n",
-        "traintest_mode = 0 # 0:train&test, 1:train, 2:test\n",
+        "traintest_mode = 2 # 0:train&test, 1:train, 2:test\n",
         "\n",
         "gpu = 0\n",
-        "data = './datasets/o2l1_mv_scl_ref_tm/cbox_tgt+lgt_to_irrgt'\n",
-        "scene = 'o2l1_mv_scl_ref_tm'\n",
+        "data = '../CGIntrinsics/CGIntrinsics/Multi-Illumination'\n",
+        "scene = 'Multi-Illumination'\n",
         "# model = 'brightest_mul_inL' # Baseline\n",
         "model = 'brightest_mul_tm_cas' # Calc LTM\n",
         "\n",
-        "suffix = '_debug_0721.00'\n",
-        "dataset = 'aligned3_bp_tm_max_rnd'\n",
+        "suffix = '_debug_0722.00'\n",
+        "# suffix = '_debug_0722.00'\n",
+        "dataset = 'mi_rnd'\n",
         "result_name = model+suffix+'_bp_eval'\n",
         "\n",
         "command = '--dataroot {} --name ./{}/{}{} --model {} --dataset_mode {}'.format(data, scene, model, suffix, model, dataset)\n",
         "command += ' --show_multi'\n",
         "command += ' --light_res 5'\n",
+        "command += ' --no_flip'\n",
         "# command += ' --max_dataset_size 10'\n",
         "# command += ' --cat_In'\n",
         "# command += ' --disp_brighest_info'\n",
@@ -224,6 +341,7 @@
         "test_command = command + ' --num_test 100 --test_mode 1'\n",
         "test_command += ' --no_save_image'\n",
         "test_command += ' --show_multi'\n",
+        "# test_command += ' --num_threads 1'\n",
         "# test_command += ' --re_index'\n",
         "\n",
         "if traintest_mode==0:\n",
@@ -233,6 +351,33 @@
         "    !python train.py {train_command}\n",
         "else:\n",
         "    !python test_bp.py {test_command}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sVc_PfkZU7ng",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "%cd /content/drive/My\\ Drive/Colabdata/irradiance_estimation\n",
+        "!git pull"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j8ib7Pu5snYu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
